k8s/lab/example-cr-outputs/session-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    field.cattle.io/publicEndpoints: '[{"addresses":["172.12.2.31","172.12.2.32","172.12.2.35","172.12.2.39"],"port":443,"protocol":"HTTPS","serviceName":"henkan-designer:session-bartu-henkan-designer-8c29c58e895b","ingressName":"henkan-designer:theia-cloud-demo-ws-ingress","hostname":"designer.172.12.2.32.sslip.io","path":"/feb90431-7568-4da4-861e-8c29c58e895b(/|$)(.*)","allNodes":false}]'
  creationTimestamp: "2025-12-09T01:48:48Z"
  generation: 2
  labels:
    app.kubernetes.io/component: session
    app.kubernetes.io/part-of: theia-cloud
    theia-cloud.io/app-definition: henkan-designer
    theia-cloud.io/session: bartu-bartu-test
    theia-cloud.io/user: bartu
  name: session-bartu-henkan-designer-8c29c58e895b
  namespace: henkan-designer
  ownerReferences:
    - apiVersion: theia.cloud/v1beta8
      kind: Session
      name: bartu-bartu-test
      uid: feb90431-7568-4da4-861e-8c29c58e895b
  resourceVersion: "71163015"
  uid: 11a0bc09-aa90-4c3f-bf6f-893be51c71ba
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bartu-bartu-test-feb90431-7568-4da4-861e-8c29c58e895b
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bartu-bartu-test-feb90431-7568-4da4-861e-8c29c58e895b
        app.kubernetes.io/component: session
        app.kubernetes.io/part-of: theia-cloud
        theia-cloud.io/app-definition: henkan-designer
        theia-cloud.io/session: bartu-bartu-test
        theia-cloud.io/user: bartu
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - --config=/etc/oauth2-proxy.cfg
            - --authenticated-emails-file=/emails/authenticated-emails-list
            - --gcp-healthchecks
            - --reverse-proxy
            - --skip-auth-route=/monitor/*
          image: henkan.azurecr.io/oauth2-proxy/oauth2-proxy:v7.5.1
          imagePullPolicy: IfNotPresent
          name: oauth2-proxy
          ports:
            - containerPort: 5000
              name: web
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/oauth2-proxy.cfg
              name: oauth2-proxy-config
              subPath: oauth2-proxy.cfg
            - mountPath: /templates
              name: oauth2-templates
            - mountPath: /emails
              name: oauth2-emails
        - env:
            - name: THEIACLOUD_APP_ID
              value: henkan
            - name: THEIACLOUD_SERVICE_URL
              value: https://<nil>
            - name: THEIACLOUD_SESSION_UID
              value: feb90431-7568-4da4-861e-8c29c58e895b
            - name: THEIACLOUD_SESSION_NAME
              value: bartu-bartu-test
            - name: THEIACLOUD_SESSION_USER
              value: bartu
            - name: THEIACLOUD_SESSION_URL
              value: https://designer.172.12.2.32.sslip.io/feb90431-7568-4da4-861e-8c29c58e895b/
            - name: THEIACLOUD_SESSION_SECRET
              value: henkansecret
            - name: THEIACLOUD_MONITOR_ENABLE_ACTIVITY_TRACKER
              value: placeholder-enable-activity-trackera
            - name: THEIACLOUD_MONITOR_PORT
              value: placeholder-monitor-env-port
            - name: THEIACLOUD_KEYCLOAK_URL
              value: https://keycloak.172.12.2.32.sslip.io/auth/
            - name: THEIACLOUD_KEYCLOAK_REALM
              value: henkan
            - name: THEIACLOUD_KEYCLOAK_CLIENT_ID
              value: henkan-designer
            - name: COMMIT_GENAI_ENDPOINT
              value: https://henkan-genai.172.12.2.32.sslip.io/webhook/6e201b9b-ca39-44d8-9600-70520911ea5c
            - name: EMAIL
              value: bartu@globalmaksimum.com
            - name: GIT_AUTHOR_NAME
              value: bartu
            - name: GIT_SSL_NO_VERIFY
              value: "true"
            - name: HENKAN_GIT_EMAIL
              value: bartu@globalmaksimum.com
            - name: HENKAN_GIT_USER
              value: bartu
            - name: HENKAN_META_API_URL
              value: http://henkan-metaapi.henkan-metaapi
            - name: HENKAN_PROJECT_GIT_URL
              value: https://github.com/GlobalMaksimum/henkan-etl-flow-project.git
            - name: HENKAN_PROJECT_NAME
              value: busra
          image: henkan.azurecr.io/globalmaksimum/theia-henkan:v2.3.3
          imagePullPolicy: IfNotPresent
          name: henkan-designer
          ports:
            - containerPort: 3000
              name: application
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 1200M
            requests:
              cpu: 100m
              memory: 1G
          securityContext:
            runAsGroup: 101
            runAsUser: 101
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /usr/share/henkan/conf/job-types
              name: jobtypes-config
            - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              name: kube-api-access
              readOnly: true
            - mountPath: /home/henkan/project
              name: user-data
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 101
      serviceAccount: designer
      serviceAccountName: designer
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: session-proxy-bartu-henkan-desi-8c29c58e895b
          name: oauth2-proxy-config
        - configMap:
            defaultMode: 420
            name: oauth2-templates
          name: oauth2-templates
        - configMap:
            defaultMode: 420
            name: jobtypes-config
          name: jobtypes-config
        - configMap:
            defaultMode: 420
            name: session-email-bartu-henkan-desi-8c29c58e895b
          name: oauth2-emails
        - name: kube-api-access
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  expirationSeconds: 3600
                  path: token
              - configMap:
                  items:
                    - key: ca.crt
                      path: ca.crt
                  name: kube-root-ca.crt
              - downwardAPI:
                  items:
                    - fieldRef:
                        apiVersion: v1
                        fieldPath: metadata.namespace
                      path: namespace
        - name: user-data
          persistentVolumeClaim:
            claimName: ws-bartu-henkan-designer-e970b4e57ee4
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: "2025-12-09T01:48:50Z"
      lastUpdateTime: "2025-12-09T01:48:50Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-12-09T01:48:48Z"
      lastUpdateTime: "2025-12-09T01:48:50Z"
      message: ReplicaSet "session-bartu-henkan-designer-8c29c58e895b-55776f75dd" has
        successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
